--- a/configure.ac
+++ b/configure.ac
@@ -428,11 +428,14 @@ case "${host_os}" in
         AC_DEFINE([DARWIN_10_14], 101400, [DARWIN_VERS value for macOS 10.14])
         AC_DEFINE([DARWIN_10_15], 101500, [DARWIN_VERS value for macOS 10.15])
         AC_DEFINE([DARWIN_11_00], 110000, [DARWIN_VERS value for macOS 11.0])
+	AC_DEFINE([DARWIN_12_00], 120000, [DARWIN_VERS value for macOS 12.0])
 
         AC_DEFINE([XCODE_10_XX], 101400, [XCODE_VERS value for Xcode earlier than 10.15])
         AC_DEFINE([XCODE_10_14_6], 101406, [XCODE_VERS value for Xcode 10.14.6])
         AC_DEFINE([XCODE_10_15], 101500, [XCODE_VERS value for Xcode 10.15])
         AC_DEFINE([XCODE_11_0], 110000, [XCODE_VERS value for Xcode 11.0])
+	AC_DEFINE([XCODE_12_0], 110000, [XCODE_VERS value for Xcode 12.0])
+	
 
         # Substitute the Xcode include path detected earlier
         AC_SUBST(XCODE_INC_DIR, [$xcodedir_inc])
@@ -529,6 +532,12 @@ case "${host_os}" in
       DEFAULT_SUPP="darwin20.supp ${DEFAULT_SUPP}"
       DEFAULT_SUPP="darwin10-drd.supp ${DEFAULT_SUPP}"
                   ;;
+	21.*)
+      AC_MSG_RESULT([Darwin 21.x (${kernel}) / macOS 12 Monterey])
+      AC_DEFINE([DARWIN_VERS], DARWIN_12_00, [Darwin / Mac OS X version])
+      DEFAULT_SUPP="darwin20.supp ${DEFAULT_SUPP}"
+      DEFAULT_SUPP="darwin10-drd.supp ${DEFAULT_SUPP}"
+                  ;;
              *)
 		  AC_MSG_RESULT([unsupported (${kernel})])
 		  AC_MSG_ERROR([Valgrind works on Darwin 10.x-20.x (Mac OS X 10.6-10.11 and macOS 10.12-11.0)])
@@ -554,6 +563,9 @@ case "${host_os}" in
             AC_DEFINE([XCODE_VERS], XCODE_11_0, [Xcode version])
             ;;
 	        *)
+		12.*)
+            AC_DEFINE([XCODE_VERS], XCODE_12_0, [Xcode version])
+            ;;
             AC_MSG_RESULT([unsupported (${xcodeversion})])
             AC_MSG_ERROR([Valgrind works on Darwin 10.x-19.x (Mac OS X 10.6-11 and macOS 10.12-15)])
             ;;
